trunk/Archive/83043c816cfceac6b6a9ab530f8e34ba-3725be9f9ce62f113fc473b4ae69c419/output
+ g++ -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp: In member function ‘void Foo::Bar(int)’:
main.cpp:13:14: error: call of overloaded ‘Bar()’ is ambiguous
   return Bar();
              ^
main.cpp:13:14: note: candidates are:
main.cpp:10:6: note: void Foo::Bar(int)
 void Foo::Bar(int param)
      ^
main.cpp:7:8: note: void Foo::Bar()
   void Bar();
        ^
main.cpp:13:14: error: return-statement with a value, in function returning 'void' [-fpermissive]
   return Bar();
              ^
